[package]
name = "forge-term"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "forge_term"
path = "src/lib.rs"

[features]
# Drive `libghostty-vt` as the authoritative Rust-side VT state machine
# (F-146). Off by default: building `libghostty-vt` requires `zig` on the
# host because the sys crate vendor-fetches Ghostty C sources at build
# time. With the feature on, `TerminalSession` exposes `cursor_position`,
# `total_rows`, and `scrollback_rows` backed by the ghostty-vt parser;
# the byte stream delivered to consumers is byte-identical to feature-off
# (xterm.js-compatible pass-through), so the F-124 contract is preserved.
ghostty-vt = ["dep:libghostty-vt"]

[dependencies]
# F-570: refcounted byte payload so the ghostty-vt tee is a refcount bump
# rather than a deep clone of every PTY chunk on the read hot path.
bytes = "1"
portable-pty = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
libghostty-vt = { version = "0.1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "test-util"] }

# F-570: throughput + allocation-count harness for the PTY reader hot path.
# Counts heap allocations via a custom allocator wrapper so the proxy
# metric is captured even when wall-time throughput is hard to compare on
# loaded CI hardware.
[[bench]]
name = "throughput"
harness = false
